--- a/chatroom/templates/index.html
+++ b/chatroom/templates/index.html
@@ -4,13 +4,18 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+
     <script type="text/javascript">
       var STATIC_URL = '{{ STATIC_URL }}'
     </script>
 </head>
 <body>
 
-<div ng-view></div>
+<div ng-view class="chat-ng-view"></div>
 
 <!-- AngularJS -->
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
