--- a/static/partials/chatroom.html
+++ b/static/partials/chatroom.html
@@ -13,8 +13,11 @@
             <div ng-controller="UsersCtrl">
                 <h2>Users</h2>
                 <ul class="nav nav-pills nav-stacked">
-                    <li ng-repeat="item in users">
-                        <a href="">{{ item.display_name }}</a>
+                    <li ng-repeat="user in users">
+                        <a href="">
+                            <span class="online-status" ng-class="{'online': user.is_online}"></span>
+                            {{ user.display_name }}
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -31,10 +34,8 @@
                         ng-init="user = idToUser(item.user)"
                     >
                         <em>{{ user.display_name }}</em>
-                        <span ng-if="user.is_online">
-                        (Online)
-                        </span>
                         : {{ item.text }}
+                        <div class="chat-date">{{ item.posted | date:'medium' }}</div>
                     </li>
                 </ul>
             </div>
